--- a/index.html
+++ b/index.html
@@ -3,13 +3,42 @@
 
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Error Page</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
+
+    <style>
+        body {
+            background-color: aqua;
+            font-family: 'Merriweather', serif;
+        }
+
+        .error_wrapper {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            flex-direction: column;
+        }
+
+        .error_wrapper>.error_heading {
+            margin-bottom: 42px;
+        }
+
+        img {
+           width: 50%;
+        }
+    </style>
 </head>
 
 <body>
-    <h1> Hi flexbox</h1>
-    
-    <p>Some content content</p>
+    <div class="error_wrapper">
+        <div class="error_heading">
+            <h2>Yikes... Who knows when that page will be availble, would you like to try again</h2>
+        </div>
+
+        <img src="images/tbot.png" alt="">
+    </div>
 </body>
 
 </html>
